// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSelect DateSelect date 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <input
      type="hidden"
      value="2019-04-23"
    />
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019-04-23
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect datetime 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <input
      type="hidden"
      value="+0000-11-03 10:00"
    />
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        +0000-11-03 10:00
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect disabled 1`] = `
<DocumentFragment>
  <div
    class="za-date-select za-date-select--disabled"
  >
    <input
      type="hidden"
      value="2019-04-23"
    />
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019-04-23
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect time 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <input
      type="hidden"
      value="07:00"
    />
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        07:00
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect trigger visible 1`] = `
<DocumentFragment>
  <div
    class="za-date-select za-date-select--placeholder"
  >
    <input
      type="hidden"
      value="2022-11-09"
    />
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2022-11-09
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect wheelDefaultValue 1`] = `
<DocumentFragment>
  <div
    class="za-date-select za-date-select--placeholder"
  >
    <input
      type="hidden"
      value="2022-11-09"
    />
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2022-11-09
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect year 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <input
      type="hidden"
      value="2017"
    />
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2017
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;
